revamp: auth path | forcast
